# dlm

./: .gitignore  AGENTS.md  OPEN_SOURCE_PLAN.md  README.md  catalog  config.py.example  generate_catalog.py  generate_toc.py  init_library.py  joplin_client.py  lib  lib-notes  lib_fzf.py  lib_notes.py  note_extractor.py  pyproject.toml  search.py  search_enhanced.py  sort  sort_books.py  sorting_config.json  test_lookup.py
src/dlm/: auth.py  catalog.py  cli.py  context.py  data.py  extractor.py  fzf.py  init.py  joplin.py  llm.py  notes.py  opener.py  settings.py  sort.py  toc.py
